--- a/aula3/atividade4.html
+++ b/aula3/atividade4.html
@@ -1,32 +1,51 @@
 <hthml>
+
     <head>
         <title> Atividade 4</title>
-            <meta charset="UTF-8">
-            <link rel="stylesheet" href="css/style4.css">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/style4.css">
     </head>
+
     <body>
         <header>
             <img src="imagens/logo3.png">
-            <ul class=menu>
-                <li><a href="#">home</a></li>
-                <li><a href="#">Quem Somos</a></li>
-                <li><a href="#">Login</a></li>             
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">QUEM SOMOS</a></li>
+                    <li><a href="#">LOGIN</a></li>
+                </ul>
+            </nav>
+
         </header>
 
         <main>
-              <h1>Business</h1>
-              <img src="imagens/predio.jpg">
-              <p>O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode digitar uma palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar ao documento uma aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de rosto e caixa de texto que se complementam entre si.</p>
+            <section class="conteudo">
+                <h1>Business</h1>
+                <div class="primeiro_conteudo">
+                    <img src="imagens/predio.jpg">
+                    <p>O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo
+                        Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode
+                        digitar uma palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar
+                        ao documento uma aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de
+                        rosto e caixa de texto que se complementam entre si.</p>
+                </div>
 
-              <img src="imagens/brilho.jpg">
-              <p>O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode digitar uma palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar ao documento uma aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de rosto e caixa de texto que se complementam entre si.</p>                    
-        </main>   
-        
+                <div class="segundo_conteudo">
+                    <p>O vídeo fornece uma maneira poderosa de ajudá-lo a provar seu argumento. Ao clicar em Vídeo
+                        Online, você pode colar o código de inserção do vídeo que deseja adicionar. Você também pode
+                        digitar uma palavra-chave para pesquisar online o vídeo mais adequado ao seu documento. Para dar
+                        ao documento uma aparência profissional, o Word fornece designs de cabeçalho, rodapé, folha de
+                        rosto e caixa de texto que se complementam entre si.</p>
+                    <img src="imagens/brilho.jpg">
+                </div>
+            </section>
+        </main>
+
         <footer>
-             <p>Todos os direitos reservados</p>
-             <img src="imagens/local.png">
-             <img src="imagens/face.png">
+            <p>Todos os direitos reservados</p>
+            <img src="imagens/local.png">
+            <img src="imagens/face.png">
         </footer>
     </body>
 </hthml>
